[tool.poetry]
name = "MyoQuant-Streamlit"
version = "0.1.0"
description = "Streamlit demo version of the MyoQuant tool"
authors = ["Corentin"]
license = "AGPL"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "^2.9.1"
cellpose = "^2.1.0"
stardist = "^0.8.3"
streamlit = "^1.12.0"
csbdeep = "^0.7.2"
pyngrok = "^5.1.0"
imageio = "^2.21.1"
scikit-image = "^0.19.3"
pandas = "^1.4.3"
matplotlib = "^3.5.3"
ipykernel = "^6.15.1"
scikit-learn = "^1.2.0"
scipy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mkdocs-material = "*"
black = {extras = ["jupyter"], version = "*"}
ipykernel = "*"
pytest = "*"
pre-commit = "*"
mypy = "*"
mkdocstrings = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
