[tool.poetry]
name = "MyoQuant-Streamlit"
version = "0.3.0"
description = "Streamlit demo version of the MyoQuant tool"
authors = ["Corentin"]
license = "AGPL"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
myoquant = "^0.3.1"
streamlit = "^1.12.0"
pyngrok = "^5.1.0"
imageio = "^2.21.1"
pandas = "^1.4.3"
matplotlib = "^3.5.3"
ipykernel = "^6.15.1"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mkdocs-material = "*"
black = {extras = ["jupyter"], version = "*"}
ipykernel = "*"
pytest = "*"
pre-commit = "*"
mypy = "*"
mkdocstrings = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
